Add or update the Azure App Service build and deployment workflow config

--- a/.github/workflows/main_yesbank.yml
+++ b/.github/workflows/main_yesbank.yml
@@ -1,3 +1,6 @@
+# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
+# More GitHub Actions for Azure: https://github.com/Azure/actions
+
 name: Build and deploy Node.js app to Azure Web App - yesbank
 
 on:
@@ -8,7 +11,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
       - uses: actions/checkout@v4
@@ -18,20 +21,17 @@ jobs:
         with:
           node-version: '20.x'
 
-      - name: Install dependencies
-        run: npm install
-
-      - name: Build the application
-        run: npm run build --if-present
-
-      - name: Zip artifact for deployment
-        run: zip -r release.zip ./dist
-
+      - name: npm install, build, and test
+        run: |
+          npm install
+          npm run build --if-present
+          npm run test --if-present
+      
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: release.zip
+          path: .
 
   deploy:
     runs-on: ubuntu-latest
@@ -40,27 +40,26 @@ jobs:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
-      id-token: write
+      id-token: write #This is required for requesting the JWT
 
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
           name: node-app
-
-      - name: Unzip artifact for deployment
-        run: unzip release.zip
-
+      
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_7463691DCEF2496FB0A23B80E83F8215 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_FBA7302276814D109AFC8ED991A3666C }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_78FEE982CFAD4DA5A174C9D8AF5F9B57 }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_94DFBFC04F724315A215385726A360CE }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_3F302542B04B48ADA8DA82DE6DD9DB1D }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_0044E17A5F22414CB58E79321E36B285 }}
 
       - name: 'Deploy to Azure Web App'
-        id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
+        id: deploy-to-webapp
         with:
           app-name: 'yesbank'
-          package: ./dist
+          slot-name: 'Production'
+          package: .
+          
